fix(PostDate): update spacing for published and updated date labels

--- a/app/post/[slug]/page.module.scss
+++ b/app/post/[slug]/page.module.scss
@@ -61,6 +61,10 @@
 	font-size: 0.8em;
 	white-space: nowrap;
 }
+.publishDate .spacer {
+	margin-left: 1em;
+	margin-right: 1em;
+}
 .author {
 	font-size: 0.9em;
 	white-space: nowrap;
